<resources>
    <string name="app_name">AutoHosts</string>
    <string name="get_last_host">Get the latest Hosts</string>
    <string name="huifu_host">Default Hosts</string>
    <string name="read_host">View Current Hosts</string>
    <string name="current_host">Current Hosts</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="get_root_fail">Get root failed</string>
    <string name="network_error">The network error or the Host URL is set incorrectly. Please check and try again</string>
    <string name="host_url">Host URL:</string>
    <string name="default_url">Default Host URL</string>
    <string name="button_ok">OK</string>
    <string name="button_back">Back</string>
    <string name="about_detail">
        <![CDATA[
        AutoHost中获取的Host都是来自
        <a href="https://github.com/yulei88">yelei88</a>
        的
        <a href="https://github.com/yulei88/autohosts">autohosts开源项目</a>
        \n我只是一个host的搬运工
        \n在这里特别感谢 <a href="https://github.com/yulei88">yulei88</a>提供的 <a href="https://github.com/yulei88/autohosts">开源autohosts</a>
        ]]>
    </string>

    <string name="host_github">
        <![CDATA[
        host 开源地址:
        <a href="https://github.com/yulei88/autohosts">github.com/yulei88/autohosts</a>
        ]]>
    </string>
    <string name="app_github">
        <![CDATA[
        AutoHosts 开源地址:
        <a href="https://github.com/ChinaHuibinWang/autohosts">github.com/ChinaHuibinWang/autohosts</a>
         ]]>
    </string>

    <string name="your_mobile_have_no_root">Your phone does not have root, will not be able to modify the hosts file, please try again after root</string>
    <string name="huifu_host_tips">Restore hosts successfully</string>
    <string name="get_last_host_tips">Get hosts successful</string>
    <string name="loading">Loading...</string>
    <string name="loading2">Loading...</string>
    <string name="downloading">downloading...</string>
    <string name="version_latest">This is the latest version</string>
    <string name="remount_failed">Remount failed.\nFile may be being used, please try again after restarting.</string>

    <string name="function_info">What\'s Fresh</string>
    <string name="version_check">Check for Updates</string>
    <string name="log">Log</string>
    <string name="line"></string>

    <string name="dlg_title">MSG</string>
    <string name="dlg_ok">OK</string>
    <string name="dlg_cancel">Cancel</string>

    <string name="dlg_info_apkdownload">Found the latest version, are you sure to download it?</string>
    <string name="dlg_info_clearlog">Are you sure clear the log?</string>

    <string name="log_get_host_success_when_reboot">Get the Hosts file successfully when Reboot phone.</string>
    <string name="log_get_host_success_when_active">Failed to get the Hosts file when reboot phone.</string>
    <string name="log_get_host_failed_when_reboot">Get the Hosts file failed when Reboot phone.</string>
    <string name="log_get_host_failed_when_active">Failed to Take the initiative to get the Hosts file.</string>
    <string name="log_reason_noroot">Reason: The phone has no oots.</string>
    <string name="log_reason_fileused">Reason: The file is being used.</string>
    <string name="log_suggest_root">Suggest: Root the phone.</string>
    <string name="log_suggest_reboot">Suggest: Reboot the phone.</string>

    <string name="log_clear">Clear Log</string>
</resources>
